manifests/dev/alice-specter/Deployment-alice-specter-specter-desktop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: alice-specter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: specter-desktop
    app.kubernetes.io/version: v0.10.4
    helm.sh/chart: specter-desktop-0.1.0
  name: alice-specter-specter-desktop
  namespace: alice-specter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: alice-specter
      app.kubernetes.io/name: specter-desktop
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: alice-specter
        app.kubernetes.io/name: specter-desktop
    spec:
      containers:
        - args:
            - --host=0.0.0.0
          image: lncm/specter-desktop:v1.10.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: specter
          name: specter-desktop
          ports:
            - containerPort: 25441
              name: specter
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: specter
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /data
              name: specter
      securityContext:
        fsGroup: 1000
      serviceAccountName: alice-specter-specter-desktop
      volumes:
        - name: specter
          persistentVolumeClaim:
            claimName: alice-specter-specter-desktop
