manifests/dev/alice-specter/Service-alice-specter-specter-desktop.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: alice-specter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: specter-desktop
    app.kubernetes.io/version: v0.10.4
    helm.sh/chart: specter-desktop-0.1.0
  name: alice-specter-specter-desktop
  namespace: alice-specter
spec:
  ports:
    - name: alice-specter-specter-desktop
      port: 25441
      protocol: TCP
      targetPort: specter
  selector:
    app.kubernetes.io/instance: alice-specter
    app.kubernetes.io/name: specter-desktop
  type: ClusterIP
