manifests/dev/alice-specter/Ingress-alice-specter-specter-desktop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: alice-specter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: specter-desktop
    app.kubernetes.io/version: v0.10.4
    helm.sh/chart: specter-desktop-0.1.0
  name: alice-specter-specter-desktop
  namespace: alice-specter
spec:
  rules:
    - host: specter-alice.dinsro.com
      http:
        paths:
          - backend:
              service:
                name: alice-specter-specter-desktop
                port:
                  number: 25441
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - specter-alice.dinsro.com
      secretName: alice-specter-prod-tls
